...
    <string name="did_you_finish_exercise">Did you finish the exercise?</string>
    <string name="did_you_finish_lab">Did you finish the lab?</string>
    <string name="did_you_finish_task_project">Did you finish the assigned task in the project?</string>
    <string name="cancel">Cancel</string>

    <!-- Time units -->
    <string name="minute">min</string>
    <string name="days">days</string>

    <!-- Pomodoro Timer -->
    <string name="pomodoro_timer_title">Pomodoro Timer</string>
    <string name="pomodoro_phase">Phase:</string>
    <string name="pomodoro_phase_work">Work</string>
    <string name="pomodoro_phase_short_break">Short Break</string>
...
    <string name="pomodoro_button_reset">Reset</string>
    <string name="pomodoro_Button_next_phase">Next Phase</string>


    <!-- Study Session -->
    <string name="study_session_title">Study Session</string>
    <string name="selected_task_txt">Selected:</string>
    <string name="pomodoros_completed_txt">Pomodoros completed:</string>
    <string name="pomodoro_time_txt">Total study time:</string>
    <string name="current_streak">Current streak:</string>
    <!-- Calendar -->
    <string name="calendar_title">Calendar</string>
    <string name="calendar_subtitle">Long-term planning and events</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

...
